# gascamcontrol

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pydocstyle  .pylintrc  CPPLINT.cfg  MANIFEST.in  Makefile  comm.py  conf.py  display.py  env.yml  environment.yml  log.py  readme.md  requirements-dev.txt  requirements.txt  setup.py  so2-camera.py  tui.py
camera/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  camera-cli  camera-cli.c  camera_py.cpp  cameras.py  cmake_install.cmake  readme.md  test
conda/: meta.yaml
devices/camera/: CMakeCache.txt  camera-cli.py  cameras.py  data
devices/camera/mock/: camera.c
devices/viscam/: viscam-cli.py  viscam.py
devices/viscam/drivers/: viscam_py.cpp
devices/viscam/drivers/elpcam/: CMakeLists.txt
devices/viscam/drivers/mock/: CMakeLists.txt
gascamcontrol/: comm.py  conf.py  devicemanager.py  diskmanager.py  exceptions.py  gascamcontrol.py  log.py  pluginmanager.py  processingqueue.py  spectrometry.py  spectrometry_ctl.py  tui.py
gascamcontrol/configurations/: gascamcontrol.conf
gascamcontrol/devices/: make_all.sh
gascamcontrol/devices/camera/: camera.py  camera_ctl.py  cameras.py
gascamcontrol/devices/camera/drivers/: camera.h  camera_py.cpp
gascamcontrol/devices/camera/drivers/mock/: camera-cli.cpp  camera.cpp
gascamcontrol/devices/camera/drivers/phx/: camera-cli.cpp  camera.cpp  exposure.cpp
gascamcontrol/devices/camerashutter/: camerashutter.py  camerashutter_ctl.py
gascamcontrol/devices/camerashutter/drivers/: camerashutter_py.cpp
gascamcontrol/devices/camerashutter/drivers/mock/: camerashutter.cpp
gascamcontrol/devices/camerashutter/drivers/serial/: CMakeLists.txt  camerashutter.cpp
gascamcontrol/devices/spectrometer/: spectrometer.py  spectrometer_ctl.py  spectrometerlive.py
gascamcontrol/devices/spectrometer/drivers/: spectrometer_py.cpp
gascamcontrol/devices/spectrometer/drivers/mock/: CMakeLists.txt  spectrometer.py
gascamcontrol/devices/spectrometer/drivers/oceanoptics/: spectrometer.py
gascamcontrol/devices/spectrometershutter/: spectrometershutter.py  spectrometershutter_ctl.py
gascamcontrol/devices/spectrometershutter/drivers/: spectrometershutter_py.cpp
gascamcontrol/devices/spectrometershutter/drivers/mock/: CMakeLists.txt  spectrometershutter.cpp
gascamcontrol/devices/spectrometershutter/drivers/pololu-maestro/: CMakeLists.txt  spectrometershutter.cpp
gascamcontrol/devices/viscam/: viscam.py  viscam_ctl.py
gascamcontrol/devices/viscam/drivers/: viscam_py.cpp
gascamcontrol/devices/viscam/drivers/elpcam/: CMakeLists.txt  viscam.cpp
gascamcontrol/devices/viscam/drivers/mock/: viscam.cpp
gascamcontrol/plugins/: basePlugin.py  plugin_gps.py
gascamcontrol/plugins/gps/: readme.md
gascamcontrol/tests/: test_devicemanager.py  test_processingqueue.py
so2camera/: comm.py  conf.py  devicemanager.py  diskmanager.py  ioo.py  log.py  pluginmanager.py  processingqueue.py  so2-camera.py  spectrometry.py  spectrometry_ctl.py  tui.py
so2camera/devices/camera/: camera-cli.py  camera.py  camera_ctl.py  cameras.py
so2camera/devices/camera/drivers/: camera.h  camera_py.cpp
so2camera/devices/camera/drivers/mock/: CMakeLists.txt  camera-cli  camera.cpp  getBufferFromFile.cpp
so2camera/devices/camera/drivers/phx/: CMakeLists.txt  camera-cli.cpp  camera.cpp  exposure.c
so2camera/devices/camerashutter/: camerashutter-cli.py  camerashutter.py  camerashutter_ctl.py
so2camera/devices/camerashutter/drivers/: camerashutter.h  camerashutter_py.cpp
so2camera/devices/camerashutter/drivers/mock/: CMakeLists.txt
so2camera/devices/camerashutter/drivers/serial/: camerashutter.cpp
so2camera/devices/spectrometer/: spectrometer-cli.py  spectrometer.py  spectrometer_ctl.py  spectrometerlive.py  spectroscopy.py
so2camera/devices/spectrometer/drivers/: spectrometer.h  spectrometer_py.cpp
so2camera/devices/spectrometer/drivers/mock/: spectrometer.cpp
so2camera/devices/spectrometer/drivers/oceanoptics/: spectrometer.py
so2camera/devices/spectrometershutter/: spectrometershutter-cli.py  spectrometershutter.py  spectrometershutter_ctl.py
so2camera/devices/spectrometershutter/drivers/: spectrometershutter.h  spectrometershutter_py.cpp
so2camera/devices/spectrometershutter/drivers/pololu-maestro/: spectrometershutter.cpp
so2camera/devices/viscam/: readme.md  viscam-cli.py  viscam.py  viscam_ctl.py
so2camera/devices/viscam/drivers/: viscam.h  viscam_py.cpp
so2camera/devices/viscam/drivers/elpcam/: viscam.cpp
so2camera/devices/viscam/drivers/mock/: viscam.cpp
so2camera/plugins/: basePlugin.py  plugin_gps.py  readme.md
tests/: test_comm.py  test_devicemanager.py  test_processingqueue.py
webapp/: index.html
