cmake_minimum_required(VERSION 2.8)
project(viscam)

if(CMAKE_COMPILER_IS_GNUCC)
	add_definitions("-pedantic")
	add_definitions("-Wall")
	add_definitions("-Wundef")
	add_definitions("-Wextra")
	add_definitions("-Wunused-parameter")
	# add_definitions("-Wshadow")
	add_definitions("-Wpointer-arith")
	add_definitions("-Wcast-qual")
	add_definitions("-Wno-missing-braces")
	add_definitions("-Wno-missing-field-initializers")
	add_definitions("-Wformat=2")
	add_definitions("-Wswitch-default")
	add_definitions("-Wswitch-enum")
	add_definitions("-Wcast-align")
	add_definitions("-Wstrict-overflow=5")
	add_definitions("-Winline")
	add_definitions("-Wunreachable-code")
	add_definitions("-Wlogical-op")
	add_definitions("-Wfloat-equal")
	add_definitions("-Wstrict-aliasing=2")
	add_definitions("-Wredundant-decls")
	add_definitions("-ggdb3")
	add_definitions("-O0")
	add_definitions("-fno-omit-frame-pointer")
	add_definitions("-ffloat-store")
	add_definitions("-fno-common")
	add_definitions("-fstrict-aliasing")
	add_definitions("-Wmissing-declarations")
endif()

message("=====MOCK_VISCAM=======")
file(COPY fixtures/ DESTINATION fixtures/)
add_definitions(-DVISCAM_MOCK_RAW="${CMAKE_CURRENT_SOURCE_DIR}/fixtures/mock.raw")

add_subdirectory(pybind11)
pybind11_add_module(viscam viscam.cpp ../viscam_py.cpp)
